--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.lasteamlab</groupId>
-  <artifactId>raspberryjuice2</artifactId>
+  <artifactId>mcpythonmod</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>RaspberryJuice2</name>
+  <name>MCPythonMod</name>
   <description>This is the start of a fork of MinecraftDawn's fork of zhuowei's RaspberryJuice plugin - updated to be compatible with post 1.16 Minecraft</description>
   <build>
     <plugins>
